# rdf-config

./: .gitignore  Dockerfile  Gemfile  Gemfile.duckdb  Gemfile.sqlite3  README.md  rdf-config.gemspec  rdfconf.rb  senbero.rb
assets/: senbero-logo.xcf
config/: dbvar.yaml  refex.yaml
config/JCM/: model.yaml  prefix.yaml
config/RDF-config/: prefix.yaml  sparql.yaml
config/amrportal/: model.yaml  prefix.yaml
config/bacdive/: description.yaml  endpoint.yaml  metadata.yaml  metadata_ja.yaml  model.shex  model.yaml  prefix.yaml
config/bgee/: description.yaml  endpoint.yaml  metadata.yaml  metadata_ja.yaml  model.yaml  prefix.yaml  sparql.yaml
config/biosample/: description.yaml  endpoint.yaml  metadata.yaml  model.yaml  prefix.yaml  sparql.yaml
config/bmrb/: description.yaml  endpoint.yaml  metadata.yaml
config/brenda/: description.yaml  endpoint.yaml  metadata.yaml  model.shex  (+2 more)
doc/: errors.md  errors_ja.md  spec.md  spec_ja.md  spec_label_ja.md  usage.md  usage_ja.md  validation.md  validation_ja.md
lib/: rdf-config.rb  rdf_config.rb
paconto/: endpoint.yaml  model.yaml
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/config/dbnsfp/: convert.yaml  model.yaml  prefix.yaml
rust/cli/src/: convert.rs  engine.rs  main.rs  model.rs  prefix.rs  turtle_native.rs  turtle_oxrdf.rs  types.rs
rust/rust_rdf_turtle/: Cargo.toml
rust/rust_rdf_turtle/src/: lib.rs
rust/rust_rdf_turtle_prog/: Cargo.toml
rust/rust_rdf_turtle_prog/src/: lib.rs  main.rs
rust/rust_tsv/: Cargo.toml
rust/rust_tsv/src/: lib.rs
rust/src/: convert.rs  engine.rs  jsonld.rs  main.rs  model.rs  ntriples.rs  turtle_native.rs  turtle_oxrdf.rs  types.rs
work/: rust.md
(+2420 files in other folders)
