[package]
name = "rdf-config"
version = "0.1.0"
edition = "2024"
description = "Convert TSV/CSV table data to RDF"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
csv = "1"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
oxrdf = "0.3.3"
